# ros2_openarmcatching_project

src/grasp_planning/: package.xml  setup.cfg  setup.py
src/grasp_planning/grasp_planning/: bimanual_planning.py  gripper_control.py
src/image_comm/: package.xml  setup.cfg  setup.py
src/image_comm/image_comm/: image_publisher.py  image_subscriber.py
src/mujoco_camera_bridge/: package.xml  setup.cfg  setup.py
src/mujoco_camera_bridge/joint_state_pkg/joint_state_pkg/: joint_state_subscriber.py
src/mujoco_camera_bridge/mujoco_camera_bridge/: data_preprocessing.py  mujoco_camera_bridge.py  object_dection.py  openarm.urdf
src/openarm_moveit_config/config/: arm.srdf  check_camera.py  controllers.yaml  generate_checkerboard.py  handeye_calibration.py  handeye_data_collector.py  joint_limits.yaml  kinematics.yaml  mujoco_stimulate_test.py  openarm copy.srdf  openarm.urdf.xacro  openarm_bimanual.xml  openarm_bimanual_cam.urdf
src/openarm_moveit_config/config/controllers/: controllers.yaml
src/openarm_moveit_config/config/handeye_data/: calibration_result.json  handeye_result.json  metadata.json
src/openarm_moveit_config/launch/: demo.launch.py  gazebo.launch.py  mujoco_demo.launch.py
src/vision_processing/: package.xml  setup.py
src/vision_processing/vision_processing/: data_preprocessing.py  object_detection.py
